# lux-protocol

./: Anchor.toml  README.md  package.json
programs/lux-session/: Cargo.toml
programs/lux-session/macros/: Cargo.toml
programs/lux-session/macros/src/: lib.rs
programs/lux-session/src/: constants.rs  error.rs  lib.rs
programs/lux-session/src/processor/: create_session.rs  mod.rs  revoke_session.rs  test_session.rs
programs/lux-session/src/state/: mod.rs  session_token.rs
programs/lux-session/tests/: test.rs
programs/zk-counter/: Cargo.toml
programs/zk-counter/src/: lib.rs
programs/zk-counter/tests/: test.rs
tests/: 001-lux-session.ts  zkns.ts
tests/helpers/: compression.ts  index.ts  types.ts
